--- a/Ecom.web/Web.config
+++ b/Ecom.web/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Ecom.web-20190715114055.mdf;Initial Catalog=aspnet-Ecom.web-20190715114055;Integrated Security=True"
+    <add name="EcomConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;;Initial Catalog=aspnet-Ecom-Database;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
